--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -365,10 +365,10 @@
               <div class="row">
                 <div class="col-8">
                   <div class="numbers">
-                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Today's Money</p>
+                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Today's order</p>
                     <h5 class="font-weight-bolder mb-0">
-                      $53,000
-                      <span class="text-success text-sm font-weight-bolder">+55%</span>
+                      19.00$
+                      <span class="text-success text-sm font-weight-bolder">+5%</span>
                     </h5>
                   </div>
                 </div>
@@ -389,7 +389,7 @@
                   <div class="numbers">
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Today's Users</p>
                     <h5 class="font-weight-bolder mb-0">
-                      2,300
+                      46
                       <span class="text-success text-sm font-weight-bolder">+3%</span>
                     </h5>
                   </div>
@@ -411,8 +411,8 @@
                   <div class="numbers">
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">New Clients</p>
                     <h5 class="font-weight-bolder mb-0">
-                      +3,462
-                      <span class="text-danger text-sm font-weight-bolder">-2%</span>
+                      +462
+                      <span class="text-danger text-sm font-weight-bolder">+2%</span>
                     </h5>
                   </div>
                 </div>
@@ -433,8 +433,8 @@
                   <div class="numbers">
                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Sales</p>
                     <h5 class="font-weight-bolder mb-0">
-                      $103,430
-                      <span class="text-success text-sm font-weight-bolder">+5%</span>
+                      $49.00
+                      <span class="text-success text-sm font-weight-bolder">+3%</span>
                     </h5>
                   </div>
                 </div>
@@ -455,8 +455,8 @@
               <div class="row">
                 <div class="col-lg-6">
                   <div class="d-flex flex-column h-100">
-                    <p class="mb-1 pt-2 text-bold">Built by developers</p>
-                    <h5 class="font-weight-bolder">Soft UI Dashboard</h5>
+                    <p class="mb-1 pt-2 text-bold">Built by vmromar</p>
+                    <h5 class="font-weight-bolder">bervicci Dashboard</h5>
                     <p class="mb-5">From colors, cards, typography to complex elements, you will find the full documentation.</p>
                     <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
                       Read More
