--- a/pages/billing.html
+++ b/pages/billing.html
@@ -18,8 +18,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjuBbTHeH_NmeBaxb0E9nGiEZ8y70-7x891VzW9DcU6Lq6yz1h_7y9kNSFOla8rtAY-NyoJUJZAXlzjnjyJ6kQps49fERfq7JZJdEGmD4pTOM9BEHHlceFoGEFjie-ku4EbvcKtvlOOc_rrlZ0_rRWUM5gItmG4OmpTSfcLewRc7Psb0olou1-OYdVLtX0/s320/jnjn.png">
+  <link rel="icon" type="image/png" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjuBbTHeH_NmeBaxb0E9nGiEZ8y70-7x891VzW9DcU6Lq6yz1h_7y9kNSFOla8rtAY-NyoJUJZAXlzjnjyJ6kQps49fERfq7JZJdEGmD4pTOM9BEHHlceFoGEFjie-ku4EbvcKtvlOOc_rrlZ0_rRWUM5gItmG4OmpTSfcLewRc7Psb0olou1-OYdVLtX0/s320/jnjn.png">
   <title>
     Soft UI Dashboard by Creative Tim
   </title>
